@@ -3,67 +3,74 @@ package com.example.rss.service;
 import com.rometools.rome.feed.synd.*;
 import com.rometools.rome.io.SyndFeedInput;
 import com.rometools.rome.io.XmlReader;
+import org.json.JSONArray;
+import org.json.JSONObject;
 import org.springframework.stereotype.Service;
 
-import java.io.*;
+import javax.annotation.PostConstruct;
+import java.io.FileWriter;
 import java.net.URL;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class RssAggregatorService {
 
-    private static final List<String> FEED_URLS = List.of(
+    private static final List<String> FEED_URLS = Arrays.asList(
             "https://dev.to/feed/tag/javascript",
             "https://hnrss.org/newest",
             "https://www.genbeta.com/feedburner.xml"
     );
 
-    public void generateJsonFeed() {
-        List<Map<String, Object>> allEntries = new ArrayList<>();
+    @PostConstruct
+    public void init() {
+        fetchAndStoreFeeds();
+    }
 
-        for (String feedUrl : FEED_URLS) {
+    public void fetchAndStoreFeeds() {
+        List<SyndEntry> allEntries = new ArrayList<>();
+
+        for (String url : FEED_URLS) {
             try {
-                URL url = new URL(feedUrl);
                 SyndFeedInput input = new SyndFeedInput();
-                SyndFeed feed = input.build(new XmlReader(url));
-
-                for (SyndEntry entry : feed.getEntries()) {
-                    Map<String, Object> data = new HashMap<>();
-                    data.put("title", entry.getTitle());
-                    data.put("link", entry.getLink());
-                    data.put("summary", entry.getDescription() != null ? entry.getDescription().getValue() : "");
-                    data.put("content", entry.getContents().isEmpty() ? data.get("summary") : entry.getContents().get(0).getValue());
-                    data.put("published", entry.getPublishedDate() != null ? entry.getPublishedDate().toInstant().toString() : "");
-
-                    Optional<String> imageUrl = entry.getEnclosures().stream()
-                            .filter(e -> e.getType().startsWith("image/"))
-                            .map(SyndEnclosure::getUrl)
-                            .findFirst();
-                    imageUrl.ifPresent(img -> data.put("imageUrl", img));
-
-                    allEntries.add(data);
-                }
-
+                SyndFeed feed = input.build(new XmlReader(new URL(url)));
+                allEntries.addAll(feed.getEntries());
             } catch (Exception e) {
-                System.err.println("Error fetching/parsing feed: " + feedUrl);
+                System.err.println("❌ Error leyendo fuente: " + url);
                 e.printStackTrace();
             }
         }
 
-        List<Map<String, Object>> sorted = allEntries.stream()
-                .sorted((a, b) -> String.valueOf(b.get("published")).compareTo(String.valueOf(a.get("published"))))
-                .collect(Collectors.toList());
+        allEntries.sort((a, b) -> {
+            Date dateA = a.getPublishedDate() != null ? a.getPublishedDate() : new Date(0);
+            Date dateB = b.getPublishedDate() != null ? b.getPublishedDate() : new Date(0);
+            return dateB.compareTo(dateA);
+        });
+
+        JSONArray jsonArray = new JSONArray();
+        for (SyndEntry entry : allEntries) {
+            JSONObject obj = new JSONObject();
+            obj.put("title", entry.getTitle());
+            obj.put("link", entry.getLink());
+            obj.put("pubDate", entry.getPublishedDate() != null ? entry.getPublishedDate().toString() : "");
+            obj.put("description", entry.getDescription() != null ? entry.getDescription().getValue() : "");
+
+            if (!entry.getEnclosures().isEmpty()) {
+                obj.put("image", entry.getEnclosures().get(0).getUrl());
+            }
+
+            jsonArray.put(obj);
+        }
 
         try {
-            Path output = Paths.get("src/main/resources/static/entries.json");
-            Files.createDirectories(output.getParent());
-            try (BufferedWriter writer = Files.newBufferedWriter(output)) {
-                writer.write(new com.fasterxml.jackson.databind.ObjectMapper().writeValueAsString(sorted));
-                System.out.println("entries.json generado exitosamente");
-            }
-        } catch (IOException e) {
+            Files.createDirectories(Paths.get("src/main/resources/static"));
+            FileWriter file = new FileWriter("src/main/resources/static/entries.json");
+            file.write(jsonArray.toString(2));
+            file.close();
+            System.out.println("✅ Archivo entries.json generado correctamente.");
+        } catch (Exception e) {
+            System.err.println("❌ Error al escribir entries.json");
             e.printStackTrace();
         }
     }
